# AWS-S3-project

./: .env  Cargo.toml  Dockerfile  LICENSE  README.md  buildInDocker.sh  startUpScript.sh
sql/: crate_events_storage.sql  create_account_storage.sql
src/: db.rs  error.rs  main.rs  s3.rs
test/downloads/: lib.rs
