[package]
name = "mys3cli"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
# File
tokio-stream = "0.1"
mime_guess = "2"
# Aws libs
aws-config = "0.6"
aws-sdk-s3 = "0.6"
# For quick exploration (xp) - use thiserror in prod and libs
anyhow = "1.0"

dotenv = "0.15.0"

serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio-rustls"] }
url = "2.2.2"